add send email with kafka