@@ -7,21 +7,26 @@ import com.devintel.notification.dto.response.EmailResponse;
 import com.devintel.notification.exception.AppException;
 import com.devintel.notification.exception.ErrorCode;
 import com.devintel.notification.repository.httpclient.EmailClient;
+import feign.FeignException;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import lombok.experimental.NonFinal;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
-@FieldDefaults(level = lombok.AccessLevel.PRIVATE)
+@FieldDefaults(level = lombok.AccessLevel.PRIVATE, makeFinal = true)
 public class EmailService {
     EmailClient emailClient;
 
-    @Value("${brevo.apiKey}")
+    @Value("${notification.email.brevo-apikey}")
+    @NonFinal
     String apiKey;
+
 
     public EmailResponse sendEmail(SendEmailRequest request) {
         EmailRequest emailRequest = EmailRequest.builder()
@@ -29,13 +34,13 @@ public class EmailService {
                         .name("Devintel")
                         .email("manhnmhe171616@fpt.edu.vn")
                         .build())
-                .to(Collections.singletonList(request.getTo()))
+                .to(List.of(request.getTo()))
                 .subject(request.getSubject())
                 .htmlContent(request.getHtmlContent())
                 .build();
         try {
             return emailClient.sendEmail(apiKey, emailRequest);
-        } catch (Exception e) {
+        } catch (FeignException e){
             throw new AppException(ErrorCode.CANNOT_SEND_EMAIL);
         }
     }
